tests/diagnostics/expressions/calls/arity_mismatch/expect.txt
# exit: 1
lib.coppice:6:15: error: expected 2 arguments, got 1
      return add(1)
                ^
